bug found: ui breaks at about 1000px

--- a/proj/src/main/webapp/chat.css
+++ b/proj/src/main/webapp/chat.css
@@ -13,6 +13,12 @@ h1 {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.card-header {
+    border: 0;
+    box-shadow: 1px 5px 5px rgba(0, 0, 0, .15);
+    z-index: 1;
+}
+
  /* bootstrap title class */ 
 .display-4 {
     font-size: 5rem;
@@ -26,6 +32,7 @@ h1 {
     border-radius: 50px;
     padding: 0 0 20px 0;
     height: 96vh;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.17), 0 5px 10px 0 rgba(0, 0, 0, 0.15);
 }
 
 .center-h {
@@ -91,6 +98,11 @@ ul {
     font-size: 0.9rem;
 }
 
+.list-group-item:last-child {
+    border: 0;
+    border-bottom-right-radius: 0 !important; 
+    border-bottom-left-radius: 0 !important;
+}
 
 /* infinte scroll */
 .scroll {
@@ -209,7 +221,7 @@ img {
 }
 
 #message-list {
-    max-height: 80%;
+    max-height: 85%;
     overflow: scroll;
     display: flex;
     flex-direction: column-reverse;
@@ -225,7 +237,7 @@ img {
 
 /* input area  */
 .card-footer {
-    background-color: #fff;
+    background-color: transparent;
     border-radius: 100px !important;
     border-top: 0;    
 }
@@ -241,6 +253,7 @@ img {
 }
 
 #message-input {
+    background-color: #e9ecef;
     border: 0;
     border-radius: 25px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.17), 0 5px 10px 0 rgba(0, 0, 0, 0.15);
